fix sentence